--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minimal-nodejs-config",
+  "name": "template-nodejs-v1-C",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
